# jupyter-mcp-server

./: .dockerignore  .gitignore  .licenserc.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSRF_FIX.md  Dockerfile  FIX_CLAUDE_CONNECTION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_MODE_FIX.md  Makefile  README.md  RELEASE.md  TESTING_RTC_FIX.md  TOOL_EXTRACTION_STATUS.md  TORNADO_TRAILING_SLASH.md  beacon.json  mcp_client.py  pyproject.toml  pytest.ini  test_config.py  validate_fixes.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  lint.sh  test.yml  (+5 more)
dev/: README.md
docs/: Makefile  README.md  docusaurus.config.js  package.json
docs_notes/: ARCHITECTURE_1.md  ASYNC_FIX.md  CSRF_FIX.md  DYNAMIC_TOOL_REGISTRY.md  EXTRACTION_PROGRESS.md  FIX_CLAUDE_CONNECTION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOCAL_MODE_FIX.md  MCP_DIRECT_INTEGRATION.md  MIGRATION.md  QUICKSTART_TOOLS.md  SUMMARY.md  TESTING_GUIDE.md  TOOLS.md  TOOL_CLASS_REFERENCE.md  TOOL_EXTRACTION_COMPLETE.md  TOOL_EXTRACTION_STATUS.md  TOOL_REFACTORING_SUMMARY.md  TORNADO_TRAILING_SLASH.md
examples/: README.md  integration_example.py
ext/: README.md
ext/sandboxes/: Makefile  README.md  pyproject.toml
ext/sandboxes/jupyter_mcp_sandboxes/: __init__.py  extension.py  kernel.py  manager.py  tools.py
ext/sandboxes/tests/: test_sandbox_manager_streaming.py  test_sandbox_runtime_manager_variants.py  test_sandbox_variants.py
jupyter_mcp_server/: CLI.py  __init__.py  __main__.py  __version__.py  auth.py  config.py  config_env.py  enroll.py  extensions.py  hooks.py  mcp.py  mode_utils.py  models.py  notebook_manager.py  otel_hook.py  sandbox_kernel.py  sandbox_manager.py  server.py  server_context.py  server_modes.py  tool_cache.py  utils.py
mcpb/: README.md  manifest.json  pyproject.toml
prompt/: README.md
scripts/: sync_mcpb_version.py
tests/: conftest.py  test_auth.py  test_cell_tools_explicit_notebook_target.py  test_clear_cell_output.py  test_cli_click.py  test_cli_click_config.py  test_cli_typer.py  test_cli_typer_config.py  test_common.py  test_config.py  test_contents_manager_sync.py  test_delete_cell.py  test_edit_cell_source.py  test_execute_cell_kernel_execution_count.py  test_execute_cell_output_fidelity.py  test_execute_cell_stream.py  test_execute_code_kernel_id.py  test_execute_code_orphaned_timeout.py  test_execute_code_timeout.py  test_execute_orphaned_timeout.py  test_execute_progress_keepalive.py  test_extension.py  test_extract_output_fidelity.py  test_hooks.py  test_jupyter_extension.py  test_jupyter_server.py  test_list_kernels.py  test_local_backend_contents_manager.py  test_mcp.py  test_mcp_server.py  test_mcpb_version_sync.py  test_move_cell.py  test_notebook_connection_disconnect_timeout.py  test_notebook_manager_ensure_kernel_alive.py  test_notebook_manager_list_all_notebooks_kernel_status.py  test_otel_hooks.py  test_otel_integration.py  test_prompts.py  test_read_tools_ydoc.py  test_restart_notebook_tool.py  (+9 more)
(+198 files in other folders)
